Fix project page spacing and layout

--- a/public/css/cms/main.css
+++ b/public/css/cms/main.css
@@ -32,5 +32,7 @@ nav ul {
 main {
     grid-area: main;
     overflow-y: scroll;
-    margin-bottom: 3em;
+}
+main .container {
+    padding-bottom: 3em;
 }
