--- a/public/css/project.css
+++ b/public/css/project.css
@@ -12,3 +12,10 @@ img {
     object-fit: cover;
     margin-bottom: -3em;
 }
+.project-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
